--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
         "symfony/console": "~2.4",
-        "react/react": "0.3.3"
+        "react/react": "0.3.3",
+        "stack/builder": "1.0.*@dev",
+        "symfony/http-foundation": "2.4.*@dev",
+        "symfony/http-kernel": "2.4.*@dev"
     },
     "autoload": {
         "psr-4": {
