--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "react/react": "0.3.3",
         "stack/builder": "1.0.*@dev",
         "symfony/http-foundation": "2.4.*@dev",
-        "symfony/http-kernel": "2.4.*@dev"
+        "symfony/http-kernel": "2.4.*@dev",
+        "zendframework/zend-http": "2.3.*@dev",
+        "zendframework/zend-mvc": "2.3.*@dev"
     },
     "autoload": {
         "psr-4": {
