--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "marcj/php-pm",
     "require": {
         "symfony/console": "~2.4",
-        "react/react": "0.3.3",
+        "react/react": "0.4.*",
         "stack/builder": "1.0.*@dev",
         "symfony/http-foundation": "2.4.*@dev",
         "symfony/http-kernel": "2.4.*@dev",
