--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "require": {
         "symfony/console": "~2.4",
         "react/react": "0.3.3",
-        "stack/builder": "1.0.*@dev",
-        "symfony/http-foundation": "2.4.*@dev",
-        "symfony/http-kernel": "2.4.*@dev",
+        "stack/builder": "~1.0.2",
+        "symfony/http-foundation": "~2.4.",
+        "symfony/http-kernel": "~2.4.",
         "zendframework/zend-http": "2.3.*@dev",
         "zendframework/zend-mvc": "2.3.*@dev"
     },
