--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,13 @@
     "name": "php-pm/php-pm",
     "require": {
         "symfony/console": "~2.6",
-        "react/react": "0.4.*"
+        "react/react": "0.4.*",
+        "php-pm/php-pm-interfaces"
     },
     "autoload": {
         "psr-4": {
             "PHPPM\\": ""
         }
-    },
-    "suggest": {
-        "php-pm/httpkernel-adapter": "HttpKernel adapter for Symfony and Laravel frameworks",
-        "php-pm/zend-adapter": "Zend application framework adapter"
     },
     "bin": ["bin/ppm"]
 }
