--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "react/socket-client": "^0.5.0",
         "mkraemer/react-pcntl": "2.0.*",
         "monolog/monolog": "^1.3",
-        "paragonie/random_compat": "^2"
+        "paragonie/random_compat": "^2",
+        "guzzlehttp/psr7": "1.2.3"
     },
     "require-dev": {
         "php-pm/httpkernel-adapter": "dev-master",
