--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "symfony/process": "^2.6|^3.0",
         "react/event-loop": "^0.4",
         "react/stream": "^0.6",
-        "react/http": "dev-server-request",
+        "react/http": "dev-master",
         "react/socket-client": "^0.6",
-        "react/socket": "^0.5",
+        "react/socket": "^0.5|^0.6|^0.7",
         "mkraemer/react-pcntl": "2.0.*",
         "monolog/monolog": "^1.3",
         "paragonie/random_compat": "^2",
@@ -23,7 +23,10 @@
     "autoload": {
         "psr-4": {
             "PHPPM\\": ""
-        }
+        },
+        "files": [
+            "React/RequestHeaderParser.php"
+        ]
     },
     "suggest": {
         "php-pm/httpkernel-adapter": "HttpKernel adapter for Symfony and Laravel frameworks",
@@ -33,11 +36,5 @@
         "ext-libev": "Allows for use of a more performant event-loop implementation.",
         "ext-event": "Allows for use of a more performant event-loop implementation."
     },
-    "bin": ["bin/ppm"],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/legionth/http"
-        }
-    ]
+    "bin": ["bin/ppm"]
 }
