--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,10 @@
         "symfony/console": "^2.6|^3.0",
         "symfony/debug": "^2.6|^3.0",
         "symfony/process": "^2.6|^3.0",
-        "react/event-loop": "^0.4",
-        "react/stream": "^0.4",
-        "react/http": "dev-master#cd15204bd15d106d7832c680e4fb0ca0ce2f5e30",
-        "react/socket-client": "^0.5.0",
-        "react/socket": "^0.5.0",
-        "mkraemer/react-pcntl": "2.0.*",
         "monolog/monolog": "^1.3",
         "paragonie/random_compat": "^2",
-        "guzzlehttp/psr7": "^1.2"
+        "guzzlehttp/psr7": "^1.2",
+        "amphp/aerys": "^0.6.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.4",
@@ -28,10 +23,7 @@
     "suggest": {
         "php-pm/httpkernel-adapter": "HttpKernel adapter for Symfony and Laravel frameworks",
         "php-pm/zend-adapter": "Zend application framework adapter",
-        "php-pm/psr7-adapter": "PSR-7 adapter",
-        "ext-libevent": "Allows for use of a more performant event-loop implementation.",
-        "ext-libev": "Allows for use of a more performant event-loop implementation.",
-        "ext-event": "Allows for use of a more performant event-loop implementation."
+        "php-pm/psr7-adapter": "PSR-7 adapter"
     },
     "bin": ["bin/ppm"]
 }
