--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,15 @@ script:
   - composer install
   - ./vendor/bin/phpunit
 
+  # integration test
+  - composer require php-pm/httpkernel-adapter:dev-master
+  - bin/ppm start --workers=1 --bridge=StaticBridge --max-requests=1 -v&
+  - bin/ppm status
+  - curl -v http://127.0.0.1:8080
+  - bin/ppm status
+  - curl -v http://127.0.0.1:8080
+  - bin/ppm status
+
 matrix:
   allow_failures:
     - php: nightly
