Use react/child-process for io handling and termination

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
   - bin/ppm status
   - curl -v -f http://127.0.0.1:8080
   - bin/ppm status
+  - bin/ppm stop
 
 matrix:
   fast_finish: true
