--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "php-pm/php-pm",
-    "description": "Process manager for modern PHP applications",
+    "description": "PHP-PM is a process manager, supercharger and load balancer for PHP applications.",
     "license": "MIT",
     "require": {
         "php": ">=5.6.0",
