--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "mkraemer/react-pcntl": "^2.0|^3.0",
         "monolog/monolog": "^1.3",
         "paragonie/random_compat": "^2.0",
-        "http-interop/http-middleware": "^0.5",
-        "ringcentral/psr7": "^1.2"
+        "ringcentral/psr7": "^1.2",
+        "http-interop/http-server-handler": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
