--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
       php: 7.1
       install:
         - rm -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
-        - composer require "phpstan/phpstan:^0.9" "friendsofphp/php-cs-fixer:^2.8"
+        - composer require "phpstan/phpstan" "friendsofphp/php-cs-fixer:^2.8"
       script:
         # Static analyzer check
         - ./vendor/bin/phpstan analyze -c .phpstan.neon --level=4 --no-progress src
