--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,19 @@ script:
   - ./vendor/bin/phpunit
   # Integration test
   - mkdir web && echo "Hello" > web/index.html
-  - bin/ppm start --workers=1 --bridge=StaticBridge --static-directory=web --max-requests=1 -v &
+  - bin/ppm start --workers=1 --bridge=PHPPM\\Tests\\TestBridge --static-directory=web --max-requests=1 -v &
   - sleep 5
   - bin/ppm status
   - curl -v -f "http://127.0.0.1:8080"
   - bin/ppm status
   - curl -v -f "http://127.0.0.1:8080"
+  - bin/ppm status
+  # Trigger 502 error by triggering an exit() in the worker
+  - bash -c 'if [[ $(curl --write-out %{http_code} --silent --output /dev/null "http://127.0.0.1:8080/test?exit_prematurely=1") == "502" ]]; then exit 0; else exit 1; fi'
+  - bin/ppm status
+  # Trigger 503 error by tying up the worker and making a second request
+  - curl -f --silent "http://127.0.0.1:8080/test?sleep=10000" &
+  - bash -c 'if [[ $(curl --write-out %{http_code} --silent --output /dev/null "http://127.0.0.1:8080") == "503" ]]; then exit 0; else exit 1; fi'
   - bin/ppm status
   - bin/ppm stop
 
