Test lowest dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,12 @@ jobs:
         # Check the code style
         - IFS=$'\n'; COMMIT_SCA_FILES=($(git diff --name-only --diff-filter=ACMRTUXB "${TRAVIS_COMMIT_RANGE}")); unset IFS
         - ./vendor/bin/php-cs-fixer fix --config=.php_cs.php -v --dry-run --diff --stop-on-violation --using-cache=no --path-mode=intersection -- "${COMMIT_SCA_FILES[@]}"
+    - stage: dependencies
+      php: 7.0
+      install:
+        - composer install --prefer-lowest
+      script:
+        - ./vendor/bin/phpunit
 
 # Cache package sources
 cache:
