--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,8 @@ jobs:
         # Check the code style
         - IFS=$'\n'; COMMIT_SCA_FILES=($(git diff --name-only --diff-filter=ACMRTUXB "${TRAVIS_COMMIT_RANGE}")); unset IFS
         - ./vendor/bin/php-cs-fixer fix --config=.php_cs.php -v --dry-run --diff --stop-on-violation --using-cache=no --path-mode=intersection -- "${COMMIT_SCA_FILES[@]}"
+  allow_failures:
+    - 7.4snapshot
 
 # Cache package sources
 cache:
